Expands service catalog, adds tracing, and improves security filters.